manifests/apps/dvwa/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: mariadb
          image: docker.io/library/mariadb:10
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
                cpu: 1000m
                memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: application
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
